feat(command_board): unified scrolling and window size support
- Add global mouse wheel + PageUp/PageDown routing (last hovered canvas retained)
- Remove per-canvas bind_all to avoid hidden tab scroll issues
- Auto focus window at startup for immediate key usage
- Support settings.windowSize (WIDTHxHEIGHT) with validation + fallback
- Default window size set to 400x500 (consistent with log message)

--- a/command_board/command_config.json
+++ b/command_board/command_config.json
@@ -197,7 +197,8 @@
     "buttonWidth": 30,
     "logOnClick": true,
     "logFile": "action.log",
-    "closeOnAction": false
+    "closeOnAction": false,
+    "windowSize": "400x500"
   },
   "aliases": {
     "git_bash": "C:\\Program Files\\Git\\git-bash.exe"
